--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,6 +38,13 @@ jobs:
           tf_actions_version: 1.9.2
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: './terraform'
+
+      - name: 'Import Existing Resources'
+        run: |
+          set -e
+          RESOURCE_GROUP_NAME="rg-cloudresumeapi"
+          az group show --name $RESOURCE_GROUP_NAME && terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME || echo "Resource group not found, skipping import."
+        working-directory: './terraform'
       
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
