--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -66,6 +66,7 @@ jobs:
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 1.9.2
+          run: terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
           tf_actions_subcommand: 'apply'
           tf_actions_working_dir: './terraform'
 
