--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -43,8 +43,20 @@ jobs:
         run: |
           set -e
           RESOURCE_GROUP_NAME="rg-cloudresumeapi"
-          # az group show --name $RESOURCE_GROUP_NAME && terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME || echo "Resource group not found, skipping import."
-          # terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
+          FUNCTION_APP_NAME="function-cloudresumeapi"
+          SERVICE_PLAN_NAME="aspcloudresumeapi"
+
+          if az group show --name $RESOURCE_GROUP_NAME; then
+            terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
+          fi
+
+          if az functionapp show --name $FUNCTION_APP_NAME --resource-group $RESOURCE_GROUP_NAME; then
+            terraform import azurerm_function_app.function_app /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.Web/sites/$FUNCTION_APP_NAME
+          fi
+
+          if az appservice plan show --name $SERVICE_PLAN_NAME --resource-group $RESOURCE_GROUP_NAME; then
+            terraform import azurerm_app_service_plan.service_plan /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.Web/serverfarms/$SERVICE_PLAN_NAME
+          fi
         working-directory: './terraform'
       
       - name: 'Terraform Validate'
