--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -46,6 +46,11 @@ jobs:
           FUNCTION_APP_NAME="function-cloudresumeapi"
           SERVICE_PLAN_NAME="aspcloudresumeapi"
 
+          export ARM_CLIENT_ID=$ARM_CLIENT_ID
+          export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
+          export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
+          export ARM_TENANT_ID=$ARM_TENANT_ID
+
           if az group show --name $RESOURCE_GROUP_NAME; then
             terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
           fi
@@ -58,6 +63,11 @@ jobs:
             terraform import azurerm_app_service_plan.service_plan /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.Web/serverfarms/$SERVICE_PLAN_NAME
           fi
         working-directory: './terraform'
+        env:
+          ARM_CLIENT_ID: ${{secrets.ARM_CLIENT_ID}}
+          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET}}
+          ARM_SUBSCRIPTION_ID: ${{secrets.ARM_SUBSCRIPTION_ID}}
+          ARM_TENANT_ID: ${{secrets.ARM_TENANT_ID}}
       
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
@@ -78,7 +88,6 @@ jobs:
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 1.9.2
-          run: terraform import azurerm_resource_group.rg_cloudresumeapi /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
           tf_actions_subcommand: 'apply'
           tf_actions_working_dir: './terraform'
 
