Terraform GitHub Actions setup - deployment.yaml import existing resource

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,10 +30,10 @@ jobs:
         with:
           creds: |
             {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
+              "clientId": "${{ secrets.AZURE_AD_CLIENT_ID }}",
+              "clientSecret": "${{ secrets.AZURE_AD_CLIENT_SECRET }}",
               "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+              "tenantId": "${{ secrets.AZURE_AD_TENANT_ID }}"
             }
       
       - name: 'Terraform Format'
@@ -70,10 +70,10 @@ jobs:
           fi
         working-directory: './terraform'
         env:
-          ARM_CLIENT_ID: ${{secrets.ARM_CLIENT_ID}}
-          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET}}
-          ARM_SUBSCRIPTION_ID: ${{secrets.ARM_SUBSCRIPTION_ID}}
-          ARM_TENANT_ID: ${{secrets.ARM_TENANT_ID}}
+          ARM_CLIENT_ID: ${{secrets.AZURE_AD_CLIENT_ID}}
+          ARM_CLIENT_SECRET: ${{secrets.AZURE_AD_CLIENT_SECRET}}
+          ARM_SUBSCRIPTION_ID: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+          ARM_TENANT_ID: ${{secrets.AZURE_AD_TENANT_ID}}
       
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
