--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -53,11 +53,11 @@ jobs:
       - name: 'Import Existing Resources'
         run: |
           set -e
-          RESOURCE_GROUP_NAME="rg-cloudresumeapi"
-          FUNCTION_APP_NAME="functioncloudresumeapi"
-          SERVICE_PLAN_NAME="aspcloudresumeapi"
-          STORAGE_ACCOUNT_NAME="stcloudresumeapi"
-          STORAGE_CONTAINER_NAME="stcontainercloudresumeapi"
+          RESOURCE_GROUP_NAME="rg-${{ vars.application_name }}"
+          FUNCTION_APP_NAME="function${{ vars.application_name }}"
+          SERVICE_PLAN_NAME="asp${{ vars.application_name }}"
+          STORAGE_ACCOUNT_NAME="st${{ vars.application_name }}i"
+          STORAGE_CONTAINER_NAME="stcontainer${{ vars.application_name }}"
 
           if az group show --name $RESOURCE_GROUP_NAME; then
             terraform import azurerm_resource_group.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
