--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -60,8 +60,8 @@ jobs:
           STORAGE_ACCOUNT_NAME="st${{ env.APPLICATION_NAME }}"
           STORAGE_CONTAINER_NAME="stcontainer${{ env.APPLICATION_NAME }}"
           COSMOSDB_ACCOUNT_NAME="cosmosmongo${{ env.APPLICATION_NAME }}"
-          # COSMOSDB_DATABASE_NAME="resumedb"
-          # COSMOSDB_COLLECTION_NAME="reasumecollection"
+          COSMOSDB_DATABASE_NAME="resumedb"
+          COSMOSDB_COLLECTION_NAME="reasumecollection"
 
           if az group show --name $RESOURCE_GROUP_NAME; then
             terraform import azurerm_resource_group.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME
@@ -83,17 +83,17 @@ jobs:
             terraform import azurerm_storage_container.main https://$STORAGE_ACCOUNT_NAME.blob.core.windows.net/$STORAGE_CONTAINER_NAME
           fi
           
-          # if az cosmosdb account show --name $COSMOSDB_ACCOUNT_NAME --resource-group $RESOURCE_GROUP_NAME; then
-          #   terraform import azurerm_cosmosdb_account.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.DocumentDB/databaseAccounts/$COSMOSDB_ACCOUNT_NAME
-          # fi
+          if az cosmosdb account show --name $COSMOSDB_ACCOUNT_NAME --resource-group $RESOURCE_GROUP_NAME; then
+            terraform import azurerm_cosmosdb_account.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.DocumentDB/databaseAccounts/$COSMOSDB_ACCOUNT_NAME
+          fi
 
-          # if az cosmosdb mongodb database show --name $COSMOSDB_DATABASE_NAME --account-name $COSMOSDB_ACCOUNT_NAME; then
-          #   terraform import azurerm_cosmosdb_mongo_database.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.DocumentDB/databaseAccounts/$COSMOSDB_ACCOUNT_NAME/mongodbDatabases/$COSMOSDB_DATABASE_NAME
-          # fi
+          if az cosmosdb mongodb database show --name $COSMOSDB_DATABASE_NAME --account-name $COSMOSDB_ACCOUNT_NAME; then
+            terraform import azurerm_cosmosdb_mongo_database.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.DocumentDB/databaseAccounts/$COSMOSDB_ACCOUNT_NAME/mongodbDatabases/$COSMOSDB_DATABASE_NAME
+          fi
 
-          # if az cosmosdb mongodb collection show --name $COSMOSDB_COLLECTION_NAME --account-name $COSMOSDB_ACCOUNT_NAME --database-name $COSMOSDB_DATABASE_NAME; then
-          #   terraform import azurerm_cosmosdb_mongo_collection.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.DocumentDB/databaseAccounts/$COSMOSDB_ACCOUNT_NAME/mongodbDatabases/$COSMOSDB_DATABASE_NAME/collections/$COSMOSDB_COLLECTION_NAME
-          # fi
+          if az cosmosdb mongodb collection show --name $COSMOSDB_COLLECTION_NAME --account-name $COSMOSDB_ACCOUNT_NAME --database-name $COSMOSDB_DATABASE_NAME; then
+            terraform import azurerm_cosmosdb_mongo_collection.main /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/$RESOURCE_GROUP_NAME/providers/Microsoft.DocumentDB/databaseAccounts/$COSMOSDB_ACCOUNT_NAME/mongodbDatabases/$COSMOSDB_DATABASE_NAME/collections/$COSMOSDB_COLLECTION_NAME
+          fi
         working-directory: './terraform'
         env:
           ARM_CLIENT_ID: ${{secrets.AZURE_AD_CLIENT_ID}}
