CosmosDb and function app setup - added config for cosmos mongodb - app can now fetch resume info from cosmos db

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,8 @@ override.tf.json
 terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/python,terraform
+
+*_azurite*
+*storage*
+
+.python_packages
