--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-  "json.schemas": [],
-  "yamlfmt.args": [],
-  "azureFunctions.deploySubpath": "app\\function",
+  "azureFunctions.deploySubpath": "app",
   "azureFunctions.scmDoBuildDuringDeployment": true,
   "azureFunctions.pythonVenv": ".venv",
   "azureFunctions.projectLanguage": "Python",
