--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -123,3 +123,38 @@ jobs:
           tf_actions_subcommand: 'apply'
           tf_actions_working_dir: './terraform'
 
+  deploy-function-app:
+    name: 'Deploy Python Function App'
+    env:
+      AZURE_FUNCTIONAPP_NAME: 'your-app-name'   # set this to your function app name on Azure
+      AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
+      PYTHON_VERSION: '3.11.1' 
+    runs-on: ubuntu-latest
+    environment: dev
+    needs: terraform
+    steps:
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@v3
+
+    - name: Setup Python ${{ env.PYTHON_VERSION }} Environment
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+
+    - name: 'Resolve Project Dependencies Using Pip'
+      shell: bash
+      run: |
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+        popd
+
+    - name: 'Run Azure Functions Action'
+      uses: Azure/functions-action@v1
+      id: fa
+      with:
+        app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+        scm-do-build-during-deployment: true
+        enable-oryx-build: true
