--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           set -e
           RESOURCE_GROUP_NAME="rg-${{ env.APPLICATION_NAME }}"
-          FUNCTION_APP_NAME="function${{ env.APPLICATION_NAME }}"
+          FUNCTION_APP_NAME="jk${{ env.APPLICATION_NAME }}"
           SERVICE_PLAN_NAME="asp${{ env.APPLICATION_NAME }}"
           STORAGE_ACCOUNT_NAME="st${{ env.APPLICATION_NAME }}"
           STORAGE_CONTAINER_NAME="stcontainer${{ env.APPLICATION_NAME }}"
@@ -126,7 +126,7 @@ jobs:
   deploy-function-app:
     name: 'Deploy Python Function App'
     env:
-      AZURE_FUNCTIONAPP_NAME: 'functioncloudresumeapi'   # set this to your function app name on Azure
+      AZURE_FUNCTIONAPP_NAME: 'jkcloudresumeapi'   # set this to your function app name on Azure
       AZURE_FUNCTIONAPP_PACKAGE_PATH: 'app'       # set this to the path to your function app project, defaults to the repository root
       PYTHON_VERSION: '3.11.1' 
     runs-on: ubuntu-latest
